# neuron_poker

./: .gitignore  .pydocstyle  .pylintrc  .travis.yml  LICENSE  main.py  main_evelyn.py  main_stephen.py  main_travis.py  pyproject.toml  pytest.ini  readme.md  readme.rst  requirements.txt  scripts.py  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pipeline.yaml
agents/: SAC_agent.py  agent_consider_equity.py  agent_custom_q1.py  agent_dqn.py  agent_keras_rl_dqn.py  agent_keypress.py  agent_random.py  agent_uto1.py  dqn_agent.py
gym_env/: __init__.py  cycle.py  enums.py  env.py  env_1.py  env_2.py  rendering.py
q_learning/: memory.py  policies.py  q.py
tests/: test_evaluator.py  test_gym_env.py  test_montecarlo.py  test_montecarlo_cpp.py  test_montecarlo_dll.py  test_montecarlo_numpy.py  test_montecarlo_python.py  test_pylint.py
tools/: Montecarlo.cpp  Montecarlo.h  hand_evaluator.py  helper.py  montecarlo_cython.pyd  montecarlo_cython.pyx  montecarlo_numpy2.py  montecarlo_python.py  setup.py  speed_comparison.ipynb
tools/deuces/: README.md  go.py  setup.py
tools/deuces/deuces/: __init__.py  card.py  deck.py  evaluator.py  lookup.py
tools/montecarlo_cpp/: CMakeLists.txt  Montecarlo.cpp  Montecarlo.h  Test.cpp  pymontecarlo.cpp
